--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
+              <a class="nav-link" href="#services">Services</a>
             </li>
 
             <li class="nav-item">
