--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
+              <a class="nav-link" href="#services">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
@@ -155,7 +155,7 @@
       </div>
     </section>
 
-    <section class="services-glass py-6">
+    <section id="services" class="services-glass py-6">
       <div class="container">
         <div class="text-center mb-5">
           <h2 class="glass-title">Our Core Services</h2>
