--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
       <div class="hero-overlay"></div>
 
       <div class="hero-content-box">
-        <h1>DATA INTELLIGENCE</h1>
+        <h1>ARTIFICIAL INTELLIGENCE</h1>
         <div class="divider"></div>
-        <p>Harnessing the power of data</p>
+        <p>Leveraging AI for growth</p>
       </div>
     </section>
 
@@ -323,7 +323,7 @@
             <h5 class="footer-title">Connect</h5>
             <ul class="footer-links">
               <li><a href="#">info@vertextech.com</a></li>
-              <li><a href="#">+254 700 000 000</a></li>
+              <li><a href="#">+254 758 898 065</a></li>
               <li><a href="#">Nairobi, Kenya</a></li>
             </ul>
 
