--- a/about.html
+++ b/about.html
@@ -131,46 +131,75 @@
       <div class="container">
         <h2 class="section-title text-center mb-4">Our Partnership Journey</h2>
         <p class="section-subtext text-center mb-5">
-          Frankline & Benson — Two paths, one vision.
+          Frankline & Benson — Two paths, one shared vision.
         </p>
 
-        <div class="journey-wrapper">
-          <!-- Left Founder -->
-          <div class="journey-founder left-founder">
-            <img src="assets/user1.png" alt="Frankline" class="journey-img" />
-            <h4 class="founder-name">Frankline</h4>
-            <span class="founder-role">Co-Founder — Data & AI Lead</span>
-          </div>
-
-          <!-- Story Text Middle -->
-          <div class="journey-text">
-            <div class="journey-box">
-              <p>
-                Born from a drive to harness AI & enterprise engineering,
-                <strong>Frankline</strong> and <strong>Benson</strong> built
-                <strong>Vertex Technology Partners</strong> to help businesses
-                turn data into decisions and automation into growth.
-              </p>
-
-              <p class="mt-3">
-                The two combined expertise in
-                <strong
-                  >Data Intelligence, Machine Learning, DevOps & Cloud
-                  Infrastructure</strong
+        <!-- FOUNDERS ROW -->
+        <div class="row g-5 justify-content-center">
+          <!-- Benson -->
+          <div class="col-md-5">
+            <div class="founder-card">
+              <div class="founder-image-wrapper">
+                <img src="assets/Benson.jpg" alt="Benson" />
+                <a
+                  href="https://www.linkedin.com/in/benson-mwihia-bm/"
+                  class="linkedin-badge"
+                  target="_blank"
                 >
-                to deliver scalable digital transformation solutions.
+                  <i class="bi bi-linkedin"></i>
+                </a>
+              </div>
+
+              <h4>Benson Mwihia</h4>
+              <span class="role">Co-Founder — Business Managing Director</span>
+              <p class="contact">📞 +254 721 611 721</p>
+
+              <p class="bio">
+                Benson brings over a decade of experience in data science and
+                analytics across banking and finance, translating data into
+                strategy that drives growth, efficiency, and performance.
               </p>
             </div>
           </div>
 
-          <!-- Right Founder -->
-          <div class="journey-founder right-founder">
-            <img src="assets/user1.png" alt="Benson" class="journey-img" />
-            <h4 class="founder-name">Benson</h4>
-            <span class="founder-role"
-              >Co-Founder — Engineering & DevOps Lead</span
-            >
+          <!-- Frankline -->
+          <div class="col-md-5">
+            <div class="founder-card">
+              <div class="founder-image-wrapper">
+                <img src="assets/Frank.jpg" alt="Frankline" />
+                <a
+                  href="https://www.linkedin.com/in/frankline-ondieki-39a61828a/"
+                  class="linkedin-badge"
+                  target="_blank"
+                >
+                  <i class="bi bi-linkedin"></i>
+                </a>
+              </div>
+
+              <h4>Frankline Ondieki</h4>
+              <span class="role">Co-Founder — CTO</span>
+              <p class="contact">📞 +254 758 898 065</p>
+
+              <p class="bio">
+                Frankline leads the technical vision of Vertex, designing
+                AI-driven, cloud-native systems that enable automation,
+                predictive intelligence, and scalable business growth.
+              </p>
+            </div>
           </div>
+        </div>
+
+        <!-- SHARED STORY -->
+        <div class="journey-story">
+          <p>
+            Born from a shared drive to harness AI and enterprise engineering,
+            <strong>Frankline and Benson</strong> founded
+            <strong>Vertex Technology Partners</strong> to help organizations
+            turn data into decisions and automation into growth. Their combined
+            expertise in Data Intelligence, Machine Learning, DevOps, and Cloud
+            Infrastructure enables scalable digital transformation with
+            measurable impact.
+          </p>
         </div>
       </div>
     </section>
@@ -178,41 +207,48 @@
     <!-- ======================= MISSION & VALUES - NEW STYLE ======================= -->
     <section class="mission-values-red py-5">
       <div class="container text-center">
-        <h2 class="section-title text-white mb-5">Mission & Values</h2>
+        <h2 class="section-title text-white mb-5">Mission,Vision & Values</h2>
 
         <div class="mv-flex">
           <div class="mv-item">
             <h3>Our Mission</h3>
             <p>
-              To empower organizations through intelligent systems that drive
-              automation, insight, and growth.
+              To design and deploy AI-driven, data-powered solutions that help
+              businesses across the world solve complex problems in automation,
+              strategy, forecasting, operational efficiency, and growth. We
+              combine Machine Learning, Data Engineering, and DevOps to deliver
+              production-ready systems that turn data into measurable business
+              impact, not just models.
             </p>
           </div>
 
           <div class="mv-divider"></div>
 
           <div class="mv-item">
-            <h3>Innovation</h3>
+            <h3>Our Vision</h3>
             <p>
-              We explore, build, and deploy solutions that push technology
-              boundaries forward.
+              To be a global AI and Machine Learning technology partner that
+              empowers organizations worldwide to automate intelligently, make
+              better strategic decisions, predict outcomes, optimize costs and
+              revenues, and unlock insights at scale.
             </p>
           </div>
 
           <div class="mv-divider"></div>
 
           <div class="mv-item">
-            <h3>Integrity & Trust</h3>
+            <h3>Our Values</h3>
             <p>
-              We prioritize transparency, security, and long-term value in
-              everything we deliver.
+              Our values are rooted in innovation, integrity, and trust. We push
+              technological boundaries to create intelligent solutions, operate
+              with transparency and ethical responsibility, and build lasting
+              partnerships through reliable, secure, and impactful delivery.
             </p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- ======================= OUR APPROACH ======================= -->
     <!-- ======================= OUR APPROACH - GRAPHICAL TIMELINE ======================= -->
     <section class="approach-timeline py-5">
       <div class="container text-center">
@@ -306,7 +342,7 @@
             <h5 class="footer-title">Connect</h5>
             <ul class="footer-links">
               <li><a href="#">info@vertextech.com</a></li>
-              <li><a href="#">+254 700 000 000</a></li>
+              <li><a href="#">+254 758 898 065</a></li>
               <li><a href="#">Nairobi, Kenya</a></li>
             </ul>
 
