fixed insights navbar

--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#services">Services</a>
+              <a class="nav-link" href="index.html#services">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
@@ -65,11 +65,9 @@
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
+
             <li class="nav-item">
-              <a class="nav-link" href="blog.html">Insights</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="index.htmlcontact.html">Contact</a>
             </li>
           </ul>
         </div>
