updated the footer links

--- a/about.html
+++ b/about.html
@@ -319,10 +319,12 @@
           <div class="col-md-3">
             <h5 class="footer-title">Services</h5>
             <ul class="footer-links">
-              <li><a href="services.html">Data Intelligence Solutions</a></li>
-              <li><a href="services.html">AI & Machine Learning</a></li>
-              <li><a href="services.html">Engineering & DevOps</a></li>
-              <li><a href="services.html">Strategic Consulting</a></li>
+              <li>
+                <a href="index.html#services">Data Intelligence Solutions</a>
+              </li>
+              <li><a href="index.html#services">AI & Machine Learning</a></li>
+              <li><a href="index.html#services">Engineering & DevOps</a></li>
+              <li><a href="index.html#services">Strategic Consulting</a></li>
             </ul>
           </div>
 
