--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
           <div class="col-md-3">
             <h5 class="footer-title">Services</h5>
             <ul class="footer-links">
-              <li><a href="services.html">Data Intelligence Solutions</a></li>
-              <li><a href="services.html">AI & Machine Learning</a></li>
-              <li><a href="services.html">Engineering & DevOps</a></li>
-              <li><a href="services.html">Strategic Consulting</a></li>
+              <li><a href="#services">Data Intelligence Solutions</a></li>
+              <li><a href="#services">AI & Machine Learning</a></li>
+              <li><a href="#services">Engineering & DevOps</a></li>
+              <li><a href="#services">Strategic Consulting</a></li>
             </ul>
           </div>
 
