--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,9 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#services">Services</a>
+              <a class="nav-link" href="index.htmlindex.html#services"
+                >Services</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
@@ -189,10 +191,12 @@
           <div class="col-md-3">
             <h5 class="footer-title">Services</h5>
             <ul class="footer-links">
-              <li><a href="services.html">Data Intelligence Solutions</a></li>
-              <li><a href="services.html">AI & Machine Learning</a></li>
-              <li><a href="services.html">Engineering & DevOps</a></li>
-              <li><a href="services.html">Strategic Consulting</a></li>
+              <li>
+                <a href="index.html#services">Data Intelligence Solutions</a>
+              </li>
+              <li><a href="index.html#services">AI & Machine Learning</a></li>
+              <li><a href="index.html#services">Engineering & DevOps</a></li>
+              <li><a href="index.html#services">Strategic Consulting</a></li>
             </ul>
           </div>
 
