--- a/services.html
+++ b/services.html
@@ -84,11 +84,6 @@
             </li>
           </ul>
         </div>
-
-        <div class="search-btn d-none d-lg-block">
-          <i class="bi bi-search"></i>
-          <!-- Bootstrap icon -->
-        </div>
       </div>
     </nav>
     <!-- ======================= SERVICES HERO ======================= -->
@@ -249,7 +244,7 @@
               <img
                 src="assets/logo.png"
                 alt="Vertex Technology Partners"
-                height="55"
+                class="footer-logo-img"
               />
             </div>
             <p class="footer-about">
