--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
       class="top-bar text-white py-2 px-3 d-flex justify-content-between align-items-center"
     >
       <div class="left-links">
-        <a href="#" class="top-link">BOOK A CALL</a>
-        <a href="#" class="top-link">SUPPORT</a>
+        <a href="contact.html" class="top-link">BOOK A CALL</a>
+        <a href="contact.html" class="top-link">SUPPORT</a>
       </div>
       <!-- SOCIAL ICONS -->
       <div class="social-icons">
@@ -73,11 +73,6 @@
               <a class="nav-link" href="blog.html">Insights</a>
             </li>
           </ul>
-        </div>
-
-        <div class="search-btn d-none d-lg-block">
-          <i class="bi bi-search"></i>
-          <!-- Bootstrap icon -->
         </div>
       </div>
     </nav>
@@ -214,7 +209,7 @@
               <img
                 src="assets/logo.png"
                 alt="Vertex Technology Partners"
-                height="55"
+                class="footer-logo-img"
               />
             </div>
             <p class="footer-about">
@@ -266,7 +261,7 @@
         </div>
 
         <div class="footer-bottom text-center mt-4 pt-3">
-          <p>© 2024 Vertex Technology Partners — All Rights Reserved.</p>
+          <p>© 2026 Vertex Technology Partners — All Rights Reserved.</p>
         </div>
       </div>
     </footer>
