added risk and compliance service

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -219,6 +219,18 @@
               Practical, role-based training that builds internal analytics and
               BI capability—enabling teams to confidently interpret insights,
               use data tools, and make better decisions.
+            </p>
+          </div>
+          <!-- 6. Risk & Compliance -->
+          <div class="glass-card">
+            <div class="glass-icon">
+              <i class="bi bi-shield-check"></i>
+            </div>
+            <h4>Risk & Compliance</h4>
+            <p>
+              Data-driven risk assessment, regulatory compliance solutions, and
+              governance frameworks designed to protect systems, ensure
+              compliance, and strengthen operational resilience.
             </p>
           </div>
         </div>
