fixed footer service links

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -304,9 +304,9 @@
               />
             </div>
             <p class="footer-about">
-              Vertex Technology Partners delivers advanced Data Intelligence,
-              AI-driven systems, scalable engineering and strategic technology
-              consulting to empower digital transformation.
+              Vertex Technology Partners is a strategy-led data, analytics,
+              artificial intelligence, and automation consultancy helping
+              organizations transform data into measurable business outcomes.
             </p>
           </div>
 
@@ -314,23 +314,25 @@
           <div class="col-md-3">
             <h5 class="footer-title">Services</h5>
             <ul class="footer-links">
-              <li>
-                <a href="index.html#services">Data Intelligence Solutions</a>
-              </li>
-              <li><a href="index.html#services">AI & Machine Learning</a></li>
-              <li><a href="index.html#services">Engineering & DevOps</a></li>
-              <li><a href="index.html#services">Strategic Consulting</a></li>
+              <li><a href="#services">Data Intelligence Solutions</a></li>
+              <li><a href="#services">AI & Machine Learning</a></li>
+              <li><a href="#services">Engineering & Development</a></li>
+              <li><a href="#services">Technology Consulting</a></li>
+              <li><a href="#services">Analytics & Data Enablement</a></li>
+              <li><a href="#services">Risk & Compliance</a></li>
             </ul>
           </div>
 
-          <!-- Useful Links -->
+          <!-- Company -->
           <div class="col-md-3">
-            <h5 class="footer-title">Useful Links</h5>
+            <h5 class="footer-title">Company</h5>
             <ul class="footer-links">
               <li><a href="about.html">About Us</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
               <li><a href="blog.html">Insights & Articles</a></li>
               <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="privacy-policy.html">Privacy Policy</a></li>
+              <li><a href="terms-of-service.html">Terms of Service</a></li>
             </ul>
           </div>
 
@@ -338,15 +340,25 @@
           <div class="col-md-2">
             <h5 class="footer-title">Connect</h5>
             <ul class="footer-links">
-              <li><a href="#">info@vertextech.com</a></li>
-              <li><a href="#">+254 758 898 065</a></li>
-              <li><a href="#">Nairobi, Kenya</a></li>
+              <li>
+                <a href="mailto:info@vertextechnologypartners.com">
+                  info@vertextechnologypartners.com
+                </a>
+              </li>
+              <li>
+                <a href="tel:+254758898065"> +254 758 898 065 </a>
+              </li>
+              <li>Nairobi, Kenya</li>
             </ul>
 
             <div class="footer-social mt-3">
-              <a href="#"><i class="bi bi-linkedin"></i></a>
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
-              <a href="#"><i class="bi bi-github"></i></a>
+              <a href="#" aria-label="LinkedIn"
+                ><i class="bi bi-linkedin"></i
+              ></a>
+              <a href="#" aria-label="Twitter/X"
+                ><i class="bi bi-twitter-x"></i
+              ></a>
+              <a href="#" aria-label="GitHub"><i class="bi bi-github"></i></a>
             </div>
           </div>
         </div>
